--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Query": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppMvcConnectionString": "Data Source=localhost,1433; Initial Catalog=appmvc; User ID=SA;Password=Password123"
+  }
 }
