--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AppMvcConnectionString": "Data Source=localhost,1433; Initial Catalog=appmvc; User ID=SA;Password=Password123"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "341496431084-bs1kbr41gfrhfvvviujq2jbt9u9ngb8m.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
