--- a/appsettings.json
+++ b/appsettings.json
@@ -10,31 +10,21 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppMvcConnectionString" : "Data Source=localhost,1433; Initial Catalog=appmvc; User ID=SA;Password=Password123"
+    "AppMvcConnectionString": "Data Source=localhost,1433; Initial Catalog=appmvc; User ID=SA;Password=Password123"
   },
-
   "MailSettings": {
-    "Mail": "xuanthulab.net@gmail.com",
-    "DisplayName": "Tên Hiện Thị (ví dụ XUANTHULAB)",
-    "Password": "passowrd ở đây",
+    "Mail": "qthuy2609@gmail.com",
+    "DisplayName": "Quang Thụy",
+    "Password": "Thuydeptrai2609",
     "Host": "smtp.gmail.com",
     "Port": 587
   },
-  
   "Authentication": {
-
     "Google": {
-      "ClientId": "dien-id-cua-ban-sdfdsfdftent.com",
-      "ClientSecret": "dien-secret-dsfsjdfjsdlfjldfjld"
-    },
-
-     
-    "Facebook": {
-      "AppId": "id-cua-bann-348504",
-      "AppSecret": "ma-bi-mat-kdsjflkdjfldf"
+      "ClientId": "341496431084-bs1kbr41gfrhfvvviujq2jbt9u9ngb8m.apps.googleusercontent.com",
+      "ClientSecret": "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"
     }
-
   }
 
-  
+
 }
