--- a/appsettings.json
+++ b/appsettings.json
@@ -15,7 +15,7 @@
   "MailSettings": {
     "Mail": "qthuy2609@gmail.com",
     "DisplayName": "Quang Thụy",
-    "Password": "Thuydeptrai2609",
+    "Password": "",
     "Host": "smtp.gmail.com",
     "Port": 587
   },
