--- a/appsettings.json
+++ b/appsettings.json
@@ -21,8 +21,8 @@
   },
   "Authentication": {
     "Google": {
-      "ClientId": "341496431084-bs1kbr41gfrhfvvviujq2jbt9u9ngb8m.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientId": "",
+      "ClientSecret": ""
     }
   }
 
